# simple-streamlit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
declarative_streamlit/base/app/: dialog.py  fragment.py  singleapp.py
declarative_streamlit/base/components/: canvas.py  dialog.py  fragment.py
declarative_streamlit/base/docs/: README.md  app-dialog.md  app-fragment.md  app-page.md  canvas.md  dialog.md  fragment.md  session-state.md
declarative_streamlit/base/handler/: action.py  broker.py
declarative_streamlit/base/logic/: sessions.py
declarative_streamlit/config/base/: representation.py  standard.py
declarative_streamlit/config/common/: representation.py  stdstreamlit.py
declarative_streamlit/config/docs/: README.md  base-representations.md  common-representations.md  containers-reference.md  elements-reference.md  standards.md  widgets-reference.md
declarative_streamlit/core/: __init__.py
declarative_streamlit/core/base/: __init__.py  renderable.py  stateful.py
declarative_streamlit/core/components/: container.py  ielement.py
declarative_streamlit/core/docs/: README.md  base-classes.md  (+4 more)
declarative_streamlit/examples/: advanced_dashboard.py  app_definition.yaml  basics.py  canvas.py  dashboard.py  logicadd.py  parsing.py  quickstart.py  standards.py
simplest/: __init__.py  app.py
simplest/core/: __init__.py
simplest/examples/: parsing.py
st_simple/: __init__.py
st_simple/base/: __init__.py
st_simple/core/: __init__.py
st_simple/err/: nonrender.py
st_simple/examples/: app_definition.yaml  basics.py  canvas.py  dashboard.py  parsing.py  quickstart.py  standards.py
tests/: test_cstparser.py  test_lstparser.py
(+78 files in other folders)
